<resources>
    <string name="app_name">chapter03</string>
    <string name="hello">ボンジュール</string>
    <string name="simple_calculator">計算機</string>
    <string name="cancel">CE</string>

    <!-- 数字按钮 -->
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <!-- 操作符按钮 -->
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_dot">.</string>
    <string name="button_equal">=</string>
    <string name="button_square">v</string>
    <string name="button_reciprocal">1/X</string>

    <!-- 功能按钮 -->
    <string name="button_clear">C</string>

</resources>
